@@ -2,6 +2,7 @@
 1) Updated to support mandrigo version 0.6.0
 2) Support for rss1.0,2.0 and atom feeds
 3) Full support for comments system
+4) Support for captcha image human recognition
 
 1.0
 1) Initial revision
